--- a/index.mdx
+++ b/index.mdx
@@ -1,28 +1,23 @@
 ---
 title: "Collective Memory and the ATTN token"
 description: "Welcome to the new home for your documentation"
+mode: "custom"
 ---
 
-## Setting up
-
-Get your documentation site up and running in minutes.
-
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
+<Card title="Get the Collective Memory app" icon="mobile" horizontal={false} href="/attn-token">
   Follow our three step quickstart guide.
 </Card>
 
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
+## Learn more
 
 <Columns cols={2}>
-  <Card title="Edit locally" icon="pen-to-square" href="/development">
+  <Card title="The ATTN token" icon="coin-blank" href="/">
     Edit your docs locally and preview them in real time.
   </Card>
-  <Card title="Customize your site" icon="palette" href="/essentials/settings">
+  <Card title="Collective Memory Q+A" icon="palette" href="/essentials/settings">
     Customize the design and colors of your site to match your brand.
   </Card>
-  <Card title="Set up navigation" icon="map" href="/essentials/navigation">
+  <Card title="Cash out your ATTNs" icon="map" href="/essentials/navigation">
     Organize your docs to help users find what they need and succeed with your product.
   </Card>
   <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
@@ -30,27 +25,4 @@ Design a docs site that looks great and empowers your users.
   </Card>
 </Columns>
 
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card title="Write with MDX" icon="pen-fancy" href="/essentials/markdown">
-    Use MDX to style your docs pages.
-  </Card>
-  <Card title="Code samples" icon="code" href="/essentials/code">
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card title="Images" icon="image" href="/essentials/images">
-    Display images and other media.
-  </Card>
-  <Card title="Reusable snippets" icon="recycle" href="/essentials/reusable-snippets">
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card title="See complete examples" icon="stars" href="https://mintlify.com/customers">
-  Browse our showcase of exceptional documentation sites.
-</Card>
+## 
