--- a/attn-token/index.mdx
+++ b/attn-token/index.mdx
@@ -3,18 +3,15 @@ title: "ATTN Tokenomics"
 description: "Building the Economic Layer of Reality  |  Updated 23 September, 2025"
 ---
 
-# **ATTN Tokenomics**
+# ATTN Tokenomics
 
-_Building the Economic Layer of Reality\
-_\
-Updated 23 September, 2025
+Building the Economic Layer of Reality | Updated 23 September, 2025
 
-## **1. Introduction**
+## 1. Introduction
 
 The **ATTN token** is the native currency of the **Collective Memory Protocol** - a decentralized social and economic layer where users create and curate Memories (time-stamped, geo-anchored content). ATTN powers staking, governance, incentives, and monetization across the ecosystem.
 
-## **\
-2. Token Overview**
+## 2. Token Overview
 
 **Name:** Attention Token (ATTN)\
 **Standard:** ERC-20 (Base)\
@@ -23,7 +20,7 @@ The **ATTN token** is the native currency of the **Collective Memory Protocol** 
 **Initial Price:** 1 ATTN = 0.01 USDC\
 **Decimals:** 6
 
-## **3. Token Utility**
+## 3. Token Utility
 
 ATTN is designed to capture and monetize attention within the Collective Memory ecosystem. \
 \
@@ -36,7 +33,7 @@ Core utilities:
 - **Governance (future):** Token holders will participate in protocol upgrades and treasury allocations.
 - **Data Licensing (future):** ATTN is the medium of exchange for accessing the Reality Graph (decentralized, verified dataset).
 
-## **4. Token Allocation**
+## 4. Token Allocation
 
 | **Category**      | **Share** | **Amount**  | **Cliff** | **Vesting Schedule**   | **Initial Unlock** |
 | :---------------- | :-------- | :---------- | :-------- | :--------------------- | :----------------- |
@@ -47,8 +44,7 @@ Core utilities:
 | Grants            | 10%       | 100,000,000 | 0         | 10 yrs inverse sigmoid | 20%                |
 | Incentives        | 35%       | 350,000,000 | 0         | 10 yrs inverse sigmoid | 20%                |
 
-## **\
-5. Emission Schedule**
+## 5. Emission Schedule
 
 - **Inflationary Supply:** Ongoing emissions offset by ATTN locking in Memories.
 - **Daily Airdrops:** 300,000 ATTN/day to curated Memories (decays annually).
@@ -58,7 +54,7 @@ Core utilities:
   - Memory of the Month: 250,000 ATTN
   - Memory of the Year: 10,000,000 ATTN
 
-## **6. Staking & Redemption Mechanics**
+## 6. Staking & Redemption Mechanics
 
 When staking into a Memory:
 
@@ -72,31 +68,33 @@ Upon redemption:
 - Plus **pro-rata share** of the Revenue Pot
 - Memory Tokens are **burned**
 
-## **7. Protocol Revenue Model**
+## 7. Protocol Revenue Model
 
-### **Core Fees**
+**Core Fees**
 
 - **0.1%** on staking
 - **0.25%** on redemption
 - **0.5%** on creator withdrawals
 
-### **Liquidity Pools**
+\
+**Liquidity Pools**
 
 - **0.3%** fee on AMM swaps (ATTN, Memory Tokens, USDC)
 
-### **Extended Revenue Streams**
+\
+**Extended Revenue Streams**
 
 - **Advertising Integration** – ATTN injections by brands
 - **Reality Graph Licensing** – access to anonymized/aggregated Memories
 - **On-Chain AI Fee Sharing** – protocol-to-protocol revenue with AI systems
 - **Private Graphs** – enterprise deployments (supply chain, events, analytics)
 
-## **8. Governance**
+## 8. Governance
 
 - **Current:** Protocol-controlled via company’s multisig.
 - **Future:** ATTN holders will vote on treasury spending, grant allocations, fee parameters, and protocol upgrades.
 
-## **9. Demand Drivers & Token Sinks**
+## 9. Demand Drivers & Token Sinks
 
 **Demand Drivers:**
 
@@ -110,32 +108,36 @@ Upon redemption:
 - ATTN staked into Memories (locked until redemption)
 - Publishing fees (spam deterrence, refunded if Memory gains traction)
 
-## **10. Composability**
+## 10. Composability
 
 - **ERC-20 ATTN:** Standard fungible token.
 - **ERC-4626 Memory Vaults:** Each Memory functions as a tokenized vault with shares.
 - **Composable Memories:** Memories can be backed by other Memories’ tokens → meta-narratives, ETFs, or recursive curation.
 - **Inter-Memory Liquidity:** Memory tokens trade via AMMs, creating narrative-driven price signals.
 
-## **11. Market & Liquidity Strategy**
+## 11. Market & Liquidity Strategy
 
-- Initial Liquidity (10%) allocated for CEX/DEX pools.
-  - ATTN \<\> USDC (on Base)
-    - Address: 0xf90bd5415e8c812cb9a2015598193dcb11833d7c
-    - 45M ATTN tokens
-    - Min price: 0.01 USDC
-    - Max price: 0.05 USDC
-    - Liquidity locked until 1st January 2026 
-  - ATTN \<\> ETH (on Base)
-    - Address: 0x53D8288cE9CbcB97FFfaCFD710c866F721a2394b
-    - 55M ATTN tokens
-    - Min price: 0.00000352238 ETH
-    - Max price: 0.00034 ETH
-    - Liquidity locked until 1st January 2027 
+_Initial_ Liquidity (10%) allocated for CEX/DEX pools.
+
+**ATTN \<\> USDC (on Base)**
+
+- Address: 0xf90bd5415e8c812cb9a2015598193dcb11833d7c
+- 45M ATTN tokens
+- Min price: 0.01 USDC
+- Max price: 0.05 USDC
+- Liquidity locked until 1st January 2026 
+
+**ATTN \<\> ETH (on Base)**
+
+- Address: 0x53D8288cE9CbcB97FFfaCFD710c866F721a2394b
+- 55M ATTN tokens
+- Min price: 0.00000352238 ETH
+- Max price: 0.00034 ETH
+- Liquidity locked until 1st January 2027 
 - Protocol incentivizes LPs via ATTN rewards.
 - Goal: ensure seamless swaps between ATTN ↔ USDC and ATTN ↔ Memory Tokens.
 
-## **12. Risk Disclosures**
+## 12. Risk Disclosures
 
 - **Smart Contract Risk:** Bugs or exploits in staking/redemption contracts.
 - **Market Risk:** Token price volatility and liquidity risks.
@@ -143,15 +145,13 @@ Upon redemption:
 - **Regulatory Risk:** Token classification subject to jurisdictional laws.
 - **Inflation Risk:** Ongoing emissions, though offset by locked ATTN and burn mechanics.
 
-## **13. Adoption & Current Traction**
+## 13. Adoption & Current Traction
 
 - **\>1.6M Memories posted** across iOS, Android, Web.
 - **10x higher content production** vs. traditional social platforms.
 - Verified coverage of conflict zones, live events, cultural phenomena.
 - Growing base of creators, curators, and advertisers.
 
-## **14. Closing Vision**
+## 14. Closing Vision
 
 ATTN is not just a token - it’s the **currency of attention and reality perception**. By embedding incentives, staking, and composable mechanics into social and cultural participation, ATTN turns reality itself into an economic layer for decentralized AI and human knowledge.
-
-**Collective Memory: Own What Matters.**
