Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -4,14 +4,14 @@ description: "Welcome to the new home for your documentation"
 mode: "custom"
 ---
 
-<Card title="Get the Collective Memory app" icon="mobile" horizontal={false} href="/attn-token">
+<Card title="Get the Collective Memory app" icon="mobile" horizontal="false" href="/attn-token">
   Follow our three step quickstart guide.
 </Card>
 
 ## Learn more
 
 <Columns cols={2}>
-  <Card title="The ATTN token" icon="coin-blank" href="/">
+  <Card title="The ATTN token" icon="coin-blank" href="/attn-token">
     Edit your docs locally and preview them in real time.
   </Card>
   <Card title="Collective Memory Q+A" icon="palette" href="/essentials/settings">
