--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Collective Memory and the ATTN token"
 description: "Welcome to the new home for your documentation"
+sidebarTitle: "Collective Memory"
 ---
 
 <Card title="Get the Collective Memory app" icon="mobile" horizontal="false" href="/attn-token">
