Documentation edits made through Mintlify web editor

--- a/blog/index.mdx
+++ b/blog/index.mdx
@@ -2,3 +2,7 @@
 title: "Collective Memory Latest Posts"
 description: "Description of your new file."
 ---
+
+<Card title="New Card" icon="sparkles" cta="Read more">
+  
+</Card>
