Documentation edits made through Mintlify web editor

--- a/blog/index.mdx
+++ b/blog/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Collective Memory Latest Posts"
 description: "Description of your new file."
+mode: "custom"
 ---
 
 <Card title="New Card" icon="sparkles" cta="Read more">
