Documentation edits made through Mintlify web editor

--- a/guides/staking-attn.mdx
+++ b/guides/staking-attn.mdx
@@ -1,9 +1,7 @@
 ---
 title: "Staking ATTN in a Memory - Explained."
-description: "
-Staking on Collective Memory means investing your ATTN (Attention Tokens) into a Memory. When you stake, you are both aiming to earn rewards and pushing that Memory higher in visibility so more people see it. This post walks you through the basics of ATTN, why people stake, how Memories grow in value, and how to get started."
+description: " Staking on Collective Memory means investing your ATTN (Attention Tokens) into a Memory. When you stake, you are both aiming to earn rewards and pushing that Memory higher in visibility so more people see it. This post walks you through the basics of ATTN, why people stake, how Memories grow in value, and how to get started."
 ---
-
 
 ## What is ATTN?
 
@@ -11,7 +9,8 @@ ATTN (Attention) is the digital currency of Collective Memory.
 
 - You earn it when people stake in your Memories.
 - You can stake it in other posts to grow your balance.
-- You can also buy ATTN on our website, and cash out by swapping ATTN → USDC → your bank or card.
+- You can also buy ATTN on our website, and cash out \
+  by swapping ATTN → USDC → your bank or card.
 
 ## Why do people stake?
 
