Documentation edits made through Mintlify web editor

--- a/guides/staking-attn.mdx
+++ b/guides/staking-attn.mdx
@@ -36,4 +36,4 @@ ATTN (Attention) is the digital currency of Collective Memory.
 - Ride the wave. When you notice a trend forming, double down on related content.
 
 Want the deeper mechanics, supply, emissions, and distribution?\
-**Read the full tokenomics → collectivememory.ai/XXXXX**
+[**Read the full tokenomics → **](https://docs.collectivememory.ai/attn-token)
