Documentation edits made through Mintlify web editor

--- a/guides/cash-out.mdx
+++ b/guides/cash-out.mdx
@@ -1,5 +1,112 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "How to Cash Out "
+description: "ATTN can be converted to USDC anytime. Converting your USDC to cash in your bank or credit/debit card involves 3rd party providers.
+In this article we’ll cover all you need to know about the whole process end to end. 
+Please note: if you have zero crypto experience (“normie”) this might seem complex, but once you’ll do it for the first time - it becomes quick and easy. The main challenge is to pick a solution that suits your region, but that’s a thing with any crypto."
 ---
 
+Cashing out from Collective Memory happens in three steps:\
+\
+1. You convert your ATTN into USDC inside your wallet - easy.\
+2. You find the proper way to cash out USDC in your region - a bit tricky only the first time, and we're here to help.\
+3. You send your USDC to the solution you found (Transak, Base and others) - easy.\
+\
+So take a deep breath and let’s do it :)
+
+---
+
+### **Step 1 - Convert ATTN to USDC**
+
+1. Log in at [**collectivememory.ai**](http://collectivememory.ai)
+2. Go to **Wallet** → select **ATTN ↔ USDC**
+3. Choose **ATTN → USDC**
+4. Enter the amount and confirm the swap.
+
+Your balance will now show in USDC.
+
+_Note: You may need a small amount of Base ETH for gas fees (around \$5 covers many transfers) We initially provide you with the gas fees to complete swaps._
+
+---
+
+### **Step 2 - Transfer your USDC to an external wallet or exchange**
+
+Once you hold USDC, you can send it to exchanges or fiat gateways that support your region. From this point, the process is handled by third-party providers.
+
+### **Step 3 - Cash out your USDC and send it to your bank account or credit / debit card**
+
+**Europe**
+
+| **Country**                                                           | **Currency** | **Providers / Payment Methods**                                                                 |
+| :-------------------------------------------------------------------- | :----------- | :---------------------------------------------------------------------------------------------- |
+| France, Germany, Belgium, Italy, Greece, Netherlands, Portugal, Spain | EUR          | Transak (Visa, Mastercard, SEPA) Coinbase (SEPA) <br />Kraken (SEPA) <br />Binance<br />OKX P2P |
+| Poland                                                                | PLN          | Transak (Visa, Mastercard, SEPA) <br />OKX (BLIK) <br />Zonda (PLN transfer)                    |
+| UK                                                                    | GBP          | Transak (Visa, Mastercard, Faster Payments), <br />direct GBP bank transfers                    |
+
+**\
+North America **
+
+| **Country**      | **Currency** | **Providers / Payment Methods**                                              |
+| :--------------- | :----------- | :--------------------------------------------------------------------------- |
+| USA (all states) | USD          | Transak (Visa, Mastercard) <br />Kraken (bank wire) <br />Gemini (bank wire) |
+| USA (New York)   | USD          | Coinbase (bank wire) <br />Gemini (bank wire)                                |
+| Mexico           | MXN          | Transak (Visa) <br />Binance P2P <br />Bitso (bank wire)                     |
+| Canada           | CAD          | Kraken (E-transfer) <br />Paytrie (E-transfer)                               |
+
+**Latin America **
+
+| **Country** | **Currency** | **Providers / Payment Methods**                |
+| :---------- | :----------- | :--------------------------------------------- |
+| Brazil      | BRL          | Transak (Visa) <br />Moonpay <br />Kraken      |
+| Chile       | CLP          | Binance P2P, <br />[Buda.com](http://Buda.com) |
+| Peru        | PEN          | Binance P2P, <br />Bunebit, <br />Pursa        |
+| Colombia    | COP          | Binance P2P, <br />[Buda.com](http://Buda.com) |
+| Bolivia     | BOB          | Binance P2P, <br />OKX P2P                     |
+
+**Middle East**
+
+| **Country** | **Currency** | **Providers / Payment Methods**  |
+| :---------- | :----------- | :------------------------------- |
+| Israel      | ILS          | Transak (Visa), Coinbase         |
+| Palestine   | ILS / USD    | Binance P2P                      |
+| Armenia     | AMD          | Bybit P2P, Idram (bank transfer) |
+
+**Eastern Europe **
+
+| **Country** | **Currency** | **Providers / Payment Methods** |
+| :---------- | :----------- | :------------------------------ |
+| Ukraine     | UAH          | Binance P2P (UAH transfer)      |
+| Russia      | RUB          | TRON network options            |
+
+**Asia**
+
+| **Country** | **Currency** | **Providers / Payment Methods**                           |
+| :---------- | :----------- | :-------------------------------------------------------- |
+| Japan       | JPY          | Binance P2P (Bank, PayPay) <br />BitFlyer (bank transfer) |
+| Hong Kong   | HKD          | OTC cash shops                                            |
+| China       | CNY          | Local providers                                           |
+
+**Africa **
+
+| **Country** | **Currency** | **Providers / Payment Methods** |
+| :---------- | :----------- | :------------------------------ |
+| DRC (Congo) | CDF          | Yellow Card, Binance P2P        |
+| Nigeria     | NGN          | Binance P2P                     |
+| Kenya       | KES          | Binance P2P                     |
+
+---
+
+### **Important**
+
+Collective Memory only supports the **ATTN → USDC** conversion. Off-ramping to your local currency is managed by external providers. Always test first with a small transfer (\$10–15).
+
+---
+
+### **Coming Soon**
+
+You’ll soon be able to send USDC directly to off-ramp providers from inside the **Collective Memory app**, simplifying the entire process.
+
+---
+
+### **Final Note**
+
+While cashing out is available, we recommend holding ATTN. The more the system grows, the more value concentrates in the token. This game is long term — those who hold are best positioned to benefit from the expansion of Collective Memory.
