Documentation edits made through Mintlify web editor

--- a/guides/cash-out.mdx
+++ b/guides/cash-out.mdx
@@ -1,21 +1,19 @@
 ---
 title: "How to Cash Out "
-description: "ATTN can be converted to USDC anytime. Converting your USDC to cash in your bank or credit/debit card involves 3rd party providers.
-In this article we’ll cover all you need to know about the whole process end to end. 
-Please note: if you have zero crypto experience (“normie”) this might seem complex, but once you’ll do it for the first time - it becomes quick and easy. The main challenge is to pick a solution that suits your region, but that’s a thing with any crypto."
+description: "ATTN can be converted to USDC anytime. Converting your USDC to cash in your bank or credit/debit card involves 3rd party providers. In this article we’ll cover all you need to know about the whole process end to end.  Please note: if you have zero crypto experience (“normie”) this might seem complex, but once you’ll do it for the first time - it becomes quick and easy. The main challenge is to pick a solution that suits your region, but that’s a thing with any crypto."
 ---
 
-Cashing out from Collective Memory happens in three steps:\
-\
-1. You convert your ATTN into USDC inside your wallet - easy.\
-2. You find the proper way to cash out USDC in your region - a bit tricky only the first time, and we're here to help.\
-3. You send your USDC to the solution you found (Transak, Base and others) - easy.\
-\
+**Cashing out from Collective Memory happens in three steps:**
+
+1. You convert your ATTN into USDC inside your wallet - easy.
+2. You find the proper way to cash out USDC in your region - a bit tricky only the first time, and we're here to help.
+3. You send your USDC to the solution you found (Transak, Base and others) - easy.
+
+---
+
 So take a deep breath and let’s do it :)
 
----
-
-### **Step 1 - Convert ATTN to USDC**
+### \*\*Step 1 - \*\*Convert ATTN to USDC
 
 1. Log in at [**collectivememory.ai**](http://collectivememory.ai)
 2. Go to **Wallet** → select **ATTN ↔ USDC**
@@ -28,12 +26,13 @@ _Note: You may need a small amount of Base ETH for gas fees (around \$5 covers m
 
 ---
 
-### **Step 2 - Transfer your USDC to an external wallet or exchange**
+### \*\*Step 2 - \*\*Transfer your USDC to an external wallet or exchange
 
 Once you hold USDC, you can send it to exchanges or fiat gateways that support your region. From this point, the process is handled by third-party providers.
 
-### **Step 3 - Cash out your USDC and send it to your bank account or credit / debit card**
+### \*\*Step 3 - \*\*Cash out your USDC and send it to your bank account or credit / debit card
 
+\
 **Europe**
 
 | **Country**                                                           | **Currency** | **Providers / Payment Methods**                                                                 |
@@ -42,8 +41,8 @@ Once you hold USDC, you can send it to exchanges or fiat gateways that support y
 | Poland                                                                | PLN          | Transak (Visa, Mastercard, SEPA) <br />OKX (BLIK) <br />Zonda (PLN transfer)                    |
 | UK                                                                    | GBP          | Transak (Visa, Mastercard, Faster Payments), <br />direct GBP bank transfers                    |
 
-**\
-North America **
+\
+**North America**
 
 | **Country**      | **Currency** | **Providers / Payment Methods**                                              |
 | :--------------- | :----------- | :--------------------------------------------------------------------------- |
@@ -52,7 +51,7 @@ North America **
 | Mexico           | MXN          | Transak (Visa) <br />Binance P2P <br />Bitso (bank wire)                     |
 | Canada           | CAD          | Kraken (E-transfer) <br />Paytrie (E-transfer)                               |
 
-**Latin America **
+**Latin America**
 
 | **Country** | **Currency** | **Providers / Payment Methods**                |
 | :---------- | :----------- | :--------------------------------------------- |
@@ -70,7 +69,7 @@ North America **
 | Palestine   | ILS / USD    | Binance P2P                      |
 | Armenia     | AMD          | Bybit P2P, Idram (bank transfer) |
 
-**Eastern Europe **
+**Eastern Europe**
 
 | **Country** | **Currency** | **Providers / Payment Methods** |
 | :---------- | :----------- | :------------------------------ |
@@ -85,7 +84,7 @@ North America **
 | Hong Kong   | HKD          | OTC cash shops                                            |
 | China       | CNY          | Local providers                                           |
 
-**Africa **
+**Africa**
 
 | **Country** | **Currency** | **Providers / Payment Methods** |
 | :---------- | :----------- | :------------------------------ |
