Documentation edits made through Mintlify web editor

--- a/guides/cash-out.mdx
+++ b/guides/cash-out.mdx
@@ -13,7 +13,7 @@ description: "ATTN can be converted to USDC anytime. Converting your USDC to cas
 
 So take a deep breath and let’s do it :)
 
-### \*\*Step 1 - \*\*Convert ATTN to USDC
+### Step 1 - Convert ATTN to USDC
 
 1. Log in at [**collectivememory.ai**](http://collectivememory.ai)
 2. Go to **Wallet** → select **ATTN ↔ USDC**
@@ -26,11 +26,11 @@ _Note: You may need a small amount of Base ETH for gas fees (around \$5 covers m
 
 ---
 
-### \*\*Step 2 - \*\*Transfer your USDC to an external wallet or exchange
+### Step 2 - Transfer your USDC to an external wallet or exchange
 
 Once you hold USDC, you can send it to exchanges or fiat gateways that support your region. From this point, the process is handled by third-party providers.
 
-### \*\*Step 3 - \*\*Cash out your USDC and send it to your bank account or credit / debit card
+### Step 3 - Cash out your USDC and send it to your bank account or credit / debit card
 
 \
 **Europe**
