Documentation edits made through Mintlify web editor

--- a/guides/cash-out.mdx
+++ b/guides/cash-out.mdx
@@ -3,15 +3,15 @@ title: "How to Cash Out "
 description: "ATTN can be converted to USDC anytime. Converting your USDC to cash in your bank or credit/debit card involves 3rd party providers. In this article we’ll cover all you need to know about the whole process end to end.  Please note: if you have zero crypto experience (“normie”) this might seem complex, but once you’ll do it for the first time - it becomes quick and easy. The main challenge is to pick a solution that suits your region, but that’s a thing with any crypto."
 ---
 
+
+---
+
 **Cashing out from Collective Memory happens in three steps:**
 
 1. You convert your ATTN into USDC inside your wallet - easy.
 2. You find the proper way to cash out USDC in your region - a bit tricky only the first time, and we're here to help.
-3. You send your USDC to the solution you found (Transak, Base and others) - easy.
-
----
-
-So take a deep breath and let’s do it :)
+3. You send your USDC to the solution you found (Transak, Base and others) - easy.\
+   So take a deep breath and let’s do it :)
 
 ### Step 1 - Convert ATTN to USDC
 
