Documentation edits made through Mintlify web editor

--- a/guides/cash-out.mdx
+++ b/guides/cash-out.mdx
@@ -3,34 +3,16 @@ title: "How to Cash Out "
 description: "ATTN can be converted to USDC anytime. Converting your USDC to cash in your bank or credit/debit card involves 3rd party providers. In this article we’ll cover all you need to know about the whole process end to end.  Please note: if you have zero crypto experience (“normie”) this might seem complex, but once you’ll do it for the first time - it becomes quick and easy. The main challenge is to pick a solution that suits your region, but that’s a thing with any crypto."
 ---
 
-
 ---
 
-**Cashing out from Collective Memory happens in three steps:**
+**Cashing out from Collective Memory happens in four steps:**
 
-1. You convert your ATTN into USDC inside your wallet - easy.
-2. You find the proper way to cash out USDC in your region - a bit tricky only the first time, and we're here to help.
-3. You send your USDC to the solution you found (Transak, Base and others) - easy.\
-   So take a deep breath and let’s do it :)
+2. Find the proper way to cash out USDC in your region - a bit tricky only the first time, and we're here to help.
+1. Convert your ATTN into USDC inside your wallet - easy.
+3. Send your USDC to the solution you found (Transak, Base and others) and cash-out - easy.
 
-### Step 1 - Convert ATTN to USDC
-
-1. Log in at [**collectivememory.ai**](http://collectivememory.ai)
-2. Go to **Wallet** → select **ATTN ↔ USDC**
-3. Choose **ATTN → USDC**
-4. Enter the amount and confirm the swap.
-
-Your balance will now show in USDC.
-
-_Note: You may need a small amount of Base ETH for gas fees (around \$5 covers many transfers) We initially provide you with the gas fees to complete swaps._
-
----
-
-### Step 2 - Transfer your USDC to an external wallet or exchange
-
-Once you hold USDC, you can send it to exchanges or fiat gateways that support your region. From this point, the process is handled by third-party providers.
-
-### Step 3 - Cash out your USDC and send it to your bank account or credit / debit card
+### \
+Step 1 - Find the proper way to cash-out
 
 \
 **Europe**
@@ -94,7 +76,33 @@ Once you hold USDC, you can send it to exchanges or fiat gateways that support y
 
 ---
 
-### **Important**
+### Step 2 - Convert ATTN to USDC
+
+1. Log in at [**collectivememory.ai**](http://collectivememory.ai)
+2. Go to **Wallet** → select **ATTN ↔ USDC**
+3. Choose **ATTN → USDC**
+4. Enter the amount and confirm the swap.
+
+Your balance will now show in USDC.
+
+_Note: You may need a small amount of Base ETH for gas fees (around \$2 covers many transfers) We initially provide you with the gas fees to complete swaps._
+
+### \
+Step 3 - Transfer your USDC to an external wallet or exchange & cash out.
+
+Once you hold USDC, send it to exchanges or fiat gateways that support your region. From this point, the process is handled by third-party providers.\
+\
+Log in (again, if needed) at [**collectivememory.ai**](http://collectivememory.ai)
+
+2. Go to **Wallet** → select **Transfer**
+3. Enter the wallet address you got from the solution you found in Step 2
+4. Enter the amount of USDC you would like to send.
+5. Click "Send" and wait for the transaction to complete
+
+Now go back to the solution you found, and continue with their instructions on how to cash out the USDC you just transferred. \
+\
+\
+**Important**
 
 Collective Memory only supports the **ATTN → USDC** conversion. Off-ramping to your local currency is managed by external providers. Always test first with a small transfer (\$10–15).
 
