Documentation edits made through Mintlify web editor

--- a/guides/cash-out.mdx
+++ b/guides/cash-out.mdx
@@ -11,8 +11,7 @@ description: "ATTN can be converted to USDC anytime. Converting your USDC to cas
 1. Convert your ATTN into USDC inside your wallet - easy.
 3. Send your USDC to the solution you found (Transak, Base and others) and cash-out - easy.
 
-### \
-Step 1 - Find the proper way to cash-out
+### Step 1 - Find the proper way to cash-out
 
 \
 **Europe**
@@ -87,8 +86,9 @@ Your balance will now show in USDC.
 
 _Note: You may need a small amount of Base ETH for gas fees (around \$2 covers many transfers) We initially provide you with the gas fees to complete swaps._
 
-### \
-Step 3 - Transfer your USDC to an external wallet or exchange & cash out.
+### 
+
+### Step 3 - Transfer your USDC to an external wallet or exchange & cash out.
 
 Once you hold USDC, send it to exchanges or fiat gateways that support your region. From this point, the process is handled by third-party providers.\
 \
