Documentation edits made through Mintlify web editor

--- a/guides/attention-as-currency.mdx
+++ b/guides/attention-as-currency.mdx
@@ -1,8 +1,6 @@
 ---
 title: "ATTN Token: Attention Becomes Currency"
-description: "
-By nature, importance is created when people focus on something together. Online, big corporations interfere with that flow, building walls that decide what should matter and what should not. ATTN is modeled to restore that natural order. It turns attention into a tradable asset, so you can invest your attention in what matters to you. When you hold and stake ATTN, you are holding a piece of the world’s collective focus. As stories and ideas attract more attention, their value inside the system grows.
-"
+description: "By nature, importance is created when people focus on something together. Online, big corporations interfere with that flow, building walls that decide what should matter and what should not. ATTN is modeled to restore that natural order. It turns attention into a tradable asset, so you can invest your attention in what matters to you. When you hold and stake ATTN, you are holding a piece of the world’s collective focus. As stories and ideas attract more attention, their value inside the system grows. "
 ---
 
 **What makes ATTN different?**
