Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -14,14 +14,11 @@ sidebarTitle: "Collective Memory"
   <Card title="The ATTN token" icon="coin-blank" href="/attn-token">
     Edit your docs locally and preview them in real time.
   </Card>
-  <Card title="Collective Memory Q+A" icon="palette" href="/essentials/settings">
+  <Card title="Collective Memory Q+A" icon="palette" href="/guides/staking-attn">
     Customize the design and colors of your site to match your brand.
   </Card>
-  <Card title="Cash out your ATTNs" icon="map" href="/essentials/navigation">
+  <Card title="Cash out your ATTNs" icon="map" href="/guides/cash-out">
     Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card title="API documentation" icon="terminal" href="/api-reference/introduction">
-    Auto-generate API documentation from OpenAPI specifications.
   </Card>
 </Columns>
 
