Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -4,21 +4,21 @@ description: "Welcome to the new home for your documentation"
 sidebarTitle: "Collective Memory"
 ---
 
-<Card title="Get the Collective Memory app" icon="mobile" horizontal="false" href="/attn-token">
-  Follow our three step quickstart guide.
+<Card title="Get the Collective Memory app" icon="mobile" horizontal={false} href="https://www.collectivememory.ai/get-app">
+  Android and iOS.
 </Card>
 
 ## Learn more
 
 <Columns cols={2}>
   <Card title="The ATTN token" icon="coin-blank" href="/attn-token">
-    Edit your docs locally and preview them in real time.
+    Lean more about the underlying asset of Collective Memory.
   </Card>
   <Card title="Collective Memory Q+A" icon="palette" href="/guides/staking-attn">
-    Customize the design and colors of your site to match your brand.
+    Staking, Attention, Memories - here you'll get answers to your questions.
   </Card>
   <Card title="Cash out your ATTNs" icon="map" href="/guides/cash-out">
-    Organize your docs to help users find what they need and succeed with your product.
+    How to cash out your ATTN earnings? A quick guide, even if you have zero crypto experience.
   </Card>
 </Columns>
 
