Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -4,7 +4,7 @@ description: "Welcome to the new home for your documentation"
 sidebarTitle: "Collective Memory"
 ---
 
-<Card title="Get the Collective Memory app" icon="mobile" horizontal={false} href="https://www.collectivememory.ai/get-app">
+<Card title="Get the Collective Memory app" icon="mobile" horizontal="false" href="https://www.collectivememory.ai/get-app">
   Android and iOS.
 </Card>
 
@@ -14,11 +14,15 @@ sidebarTitle: "Collective Memory"
   <Card title="The ATTN token" icon="coin-blank" href="/attn-token">
     Lean more about the underlying asset of Collective Memory.
   </Card>
-  <Card title="Collective Memory Q+A" icon="palette" href="/guides/staking-attn">
+  <Card title="Collective Memory Q+A" icon="question" href="/guides/staking-attn">
     Staking, Attention, Memories - here you'll get answers to your questions.
   </Card>
-  <Card title="Cash out your ATTNs" icon="map" href="/guides/cash-out">
+  <Card title="Cash out your ATTNs" icon="dollar" href="/guides/cash-out">
     How to cash out your ATTN earnings? A quick guide, even if you have zero crypto experience.
+  </Card>
+  <Card title="ATTN Withdrawals" icon="road" href="https://docs.collectivememory.ai/guides/withdrawals-explained">
+    How to withdraw the ATTN you earned. \
+    Learn more about how Collective Memory withdrawals work.
   </Card>
 </Columns>
 
