Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -20,7 +20,7 @@ sidebarTitle: "Collective Memory"
   <Card title="Cash out your ATTNs" icon="dollar" href="/guides/cash-out">
     How to cash out your ATTN earnings? A quick guide, even if you have zero crypto experience.
   </Card>
-  <Card title="ATTN Withdrawals" icon="road" href="https://docs.collectivememory.ai/guides/withdrawals-explained">
+  <Card title="ATTN Withdrawals" icon="bank" href="https://docs.collectivememory.ai/guides/withdrawals-explained">
     How to withdraw the ATTN you earned. \
     Learn more about how Collective Memory withdrawals work.
   </Card>
