Documentation edits made through Mintlify web editor

--- a/guides/withdrawals-explained.mdx
+++ b/guides/withdrawals-explained.mdx
@@ -8,9 +8,9 @@ Our platform is growing fast - as you’ve probably noticed. More users, more me
 
 To support this rapid growth, we need to carefully balance the economy between all types of users - creators and stakers, new members and early adopters. Our goal is that within a year, withdrawing ATTN will be completely unlimited and traded on the open market.
 
-**Withdrawals **\
-Withdrawals are currently limited to 20,000 ATTN per month for users. This structure is designed to create long term value by focusing on network growth while still allowing short term cashouts.**\
-**\
+**Withdrawals** \
+Withdrawals are currently limited to 20,000 ATTN per month for users. This structure is designed to create long term value by focusing on network growth while still allowing short term cashouts.\
+\
 As the system expands, limits will gradually increase. Our goal is to completely remove withdrawal limits within a year, as liquidity, user base, and overall system stability continue growing together. 
 
 **The ATTN pool **\
