Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -11,7 +11,7 @@ sidebarTitle: "Collective Memory"
 ## Learn more
 
 <Columns cols={2}>
-  <Card title="The ATTN token" icon="coin-blank" href="/attn-token">
+  <Card title="ATTN tokenomics" icon="coin-blank" href="/attn-token">
     Lean more about the underlying asset of Collective Memory.
   </Card>
   <Card title="Collective Memory Q+A" icon="question" href="/guides/staking-attn">
@@ -23,6 +23,9 @@ sidebarTitle: "Collective Memory"
   <Card title="ATTN Withdrawals" icon="bank" href="https://docs.collectivememory.ai/guides/withdrawals-explained">
     How to withdraw the ATTN you earned. \
     Learn more about how Collective Memory withdrawals work.
+  </Card>
+  <Card title="Attention, Trust, and the ATTN Token" icon="sparkles" href="https://docs.collectivememory.ai/guides/attention-explained">
+    Explained for non-crypto audience, aka "normies" :)
   </Card>
 </Columns>
 
