Documentation edits made through Mintlify web editor

--- a/guides/make-attn.mdx
+++ b/guides/make-attn.mdx
@@ -1,11 +1,8 @@
 ---
-title: "📸 Chapter: How You Make ATTN"
+title: "How You Make ATTN"
 description: "📸 Chapter: How You Make ATTN
-
-ATTN is earned by adding real value to the Collective Memory ecosystem.
-Every action that captures authentic attention strengthens the network - and rewards you for it."
+ATTN is earned by adding real value to the Collective Memory ecosystem. Every action that captures authentic attention strengthens the network - and rewards you for it."
 ---
-
 
 You make ATTN through three core pathways:
 
@@ -43,7 +40,6 @@ Attempts to game the system -
 - Fake memories / screenshots / copycats
 - Using bots or manipulation tactics
 - Engaging in spam or dishonest behavior
-
 - simply don’t work.
 
 Such actions generate no ATTN, and can lead to permanent blocking from the platform.
