Documentation edits made through Mintlify web editor

--- a/guides/make-attn.mdx
+++ b/guides/make-attn.mdx
@@ -1,7 +1,6 @@
 ---
 title: "How You Make ATTN"
-description: "📸 Chapter: How You Make ATTN
-ATTN is earned by adding real value to the Collective Memory ecosystem. Every action that captures authentic attention strengthens the network - and rewards you for it."
+description: "📸 Chapter: How You Make ATTN ATTN is earned by adding real value to the Collective Memory ecosystem. Every action that captures authentic attention strengthens the network - and rewards you for it."
 ---
 
 You make ATTN through three core pathways:
