Documentation edits made through Mintlify web editor

--- a/guides/attn-rewards.mdx
+++ b/guides/attn-rewards.mdx
@@ -13,7 +13,7 @@ That’s why we’ve introduced a multi-tier Liquid ATTN withdrawal system - a f
 
 Each month, you **earn locked ATTN** based on your contributions and community impact.\
 \
-TIP: Click here to learn the best way to earn ATTN in Collective Memory.\
+[TIP: Click here to learn the best way to earn ATTN in Collective Memory.](https://docs.collectivememory.ai/make-attn)\
 \
 This ATTN goes into your **vault**, where it grows as a **long-term savings balance** - representing your share in the ecosystem’s expanding value.
 
@@ -49,13 +49,13 @@ This balance between liquid and locked ATTN keeps the token’s economy healthy 
 ## **📈 How ATTN Gains Value**
 
 ATTN is publicly traded, primarily in **Uniswap liquidity pools**.\
- Liquidity drives the price:
+Liquidity drives the price:
 
 - **More liquidity → higher price**
 - **Less liquidity → lower price**
 
 The system is designed so that as liquidity grows, **the value of ATTN increases automatically**.\
- For example:
+For example:
 
 | **USDC Liquidity** | **Token Price (USDC/ATTN)** |
 | :----------------- | :-------------------------- |
