Documentation edits made through Mintlify web editor

--- a/guides/tiered-withdrawals.mdx
+++ b/guides/tiered-withdrawals.mdx
@@ -1,23 +1,24 @@
 ---
 title: "A new withdrawal mechanism: Transparent and fair monthly ATTN, according to your contribution. "
-description: "Today, we’re releasing a new way to withdraw.
+description: "Today, we’re releasing a new way to withdraw. 
 This release note describes all changes and features added."
 ---
 
-**Context**
+### **Context**
 
 We are building a decentralized network based on attention and trust. Like in human memory, attention flows to what matters - and when it accumulates, that memory becomes important. Anyone can add content to Collective Memory, but the supply of attention (ATTN tokens) is fixed. As the network grows and more people use ATTN, it becomes scarcer and more valuable.\
 \
 When we hold and use attention, we strengthen the system. Over time, its price can rise significantly. ATTN is a long term investment - you’re holding an asset that can fund big goals: a home, a degree, or a trip around the world. The latest update reflects these values. It ensures more users can earn and benefit from ATTN. 
 
-**The new ATTN Withdrawal system is reliable, predictable, and fair.**
+### **The new ATTN Withdrawal system is reliable, predictable, and fair.**
 
 Attention flows to the important information. It should also flow to the important people: The ones who create and invest, the ones who believe in Collective Memory and represent us out in the open world. This update introduces user tiers: Contribute more, earn more ATTN.
 
-Higher tiers can withdraw more ATTN each month. To go up the tiers:\
-- Create attention worthy memories. \
-- Stake in memories you think matter.\
-- Add great people to the platform\
+Higher tiers can withdraw more ATTN each month. To go up the tiers:\\
+
+- Create attention worthy memories. 
+- Stake in memories you think matter.
+- Add great people to the platform
 - Be consistent. Daily Activity helps you climb the tiers.
 
 Because withdrawals are in ATTN, growing the token’s value has a huge impact -  your withdrawals are worth more. The tiers are listed below: 
@@ -34,15 +35,16 @@ The new ‘Top’ feed lets you see the top contributors to Collective Memory. T
 
 \<IMAGE\>
 
-**What happens when you hold ATTN long term? **
+### What happens when you hold ATTN long term?
 
 In simple terms, the price of ATTN increases when liquidity is added to the token. When users, brands, and bots buy attention to spend in Collective Memory, liquidity increases. Today, in the infancy of Collective Memory, the Token has \$50K in liquidity. This has led to 9% appreciation since we launched. In our rapidly growing system, new entities are buying ATTN with dollars every day. What happens when ATTN has \$1 million in liquidity? Let’s simulate: 
 
-If you’re an Elite Mapper, your 50K monthly ATTN is worth \$30,000. That’s \$360,000 a year. \
-If you’re a Pro Mapper, your 20K monthly ATTN is worth \$12,000. That’s \$144,000 a year. \
-If you’re a Top Mapper, your 10K monthly ATTN is worth \$6,000. That’s \$72,000 a year. \
-If you’re a Solid Mapper, your 1K monthly ATTN is worth \$600. That’s \$7,200 a year.\
-If you’re a Top 1000 Mapper, your 500 monthly ATTN is worth \$300. That’s \$3,600 a year.
+If you’re:\
+An Elite Mapper, your 50K monthly ATTN is worth \$30,000. That’s \$360,000 a year. \
+A Pro Mapper, your 20K monthly ATTN is worth \$12,000. That’s \$144,000 a year. \
+A Top Mapper, your 10K monthly ATTN is worth \$6,000. That’s \$72,000 a year. \
+A Solid Mapper, your 1K monthly ATTN is worth \$600. That’s \$7,200 a year.\
+A Top 1000 Mapper, your 500 monthly ATTN is worth \$300. That’s \$3,600 a year.
 
 This may sound far - but it’s not. You’re already holding ATTN tokens. When you understand the importance of ATTN, holding it long term becomes a no-brainer: Your dedication and support of the system can grow to heights you’ve never imagined. If the token reaches \$1, even Top 1000 mappers will have accumulated attention worth more than \$60,000. This can become reality if we work together. When Collective Memory skyrockets - you will too.
 
