Documentation edits made through Mintlify web editor

--- a/guides/tiered-withdrawals.mdx
+++ b/guides/tiered-withdrawals.mdx
@@ -1,7 +1,6 @@
 ---
 title: "A new withdrawal mechanism: Transparent and fair monthly ATTN, according to your contribution. "
-description: "Today, we’re releasing a new way to withdraw. 
-This release note describes all changes and features added."
+description: "Today, we’re releasing a new way to withdraw.  This release note describes all changes and features added."
 ---
 
 ### **Context**
@@ -21,7 +20,9 @@ Higher tiers can withdraw more ATTN each month. To go up the tiers:\\
 - Add great people to the platform
 - Be consistent. Daily Activity helps you climb the tiers.
 
-Because withdrawals are in ATTN, growing the token’s value has a huge impact -  your withdrawals are worth more. The tiers are listed below: 
+Because withdrawals are in ATTN, growing the token’s value has a huge impact -  your withdrawals are worth more. 
+
+### Collective Memory tiers: 
 
 **Elite** **Mapper**: Top 20 users. 50K ATTN monthly withdrawals. Currently worth  \>\$500.\
 **Pro** **Mapper**: Top 50 users. 20K ATTN monthly withdrawals. Currently worth  \>\$200.\
